--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "ace",
     "babel"
   ],
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "files": [
     "*.md",
     "demo",
     "src"
   ],
   "scripts": {
+    "build": "rimraf lib && babel ./src -d lib",
     "demo": "UV_THREADPOOL_SIZE=100 webpack-dev-server  --progress --port 4001  --colors --content-base demo --hot --inline --config demo/webpack.config.js"
   },
   "repository": {
@@ -34,6 +35,8 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "react-dom": "^15.0.2",
+    "react-hot": "^0.1.0",
+    "rimraf": "^2.5.2",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
