--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  plugins: ["transform-export-extensions"],
-  presets: ["es2015", "react", "stage-0"],
+  presets: ["react", "es2015", "stage-0"],
 }
