--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-doc",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "react doc",
   "keywords": [
     "react",
@@ -37,6 +37,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.22.0",
     "react-dom": "^15.0.2",
     "react-hot": "^0.1.0",
     "rimraf": "^2.5.2",
@@ -47,6 +48,7 @@
     "babel-standalone": "6.7.7",
     "ch-brace": "^0.1.0",
     "ch-react-ace": "^0.1.0",
-    "react": "^15.0.2"
+    "react": "^15.0.2",
+    "sass.js": "^0.10.3"
   }
 }
