--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-standalone": "6.7.7",
     "ch-brace": "^0.1.0",
     "ch-react-ace": "^0.1.0",
+    "jsonlint-mod": "^1.7.0",
     "react": "^15.0.2",
     "sass.js": "^0.10.3"
   }
